--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -8,6 +8,8 @@ jobs:
     # Request manual activation file
     - name: Request manual activation file
       id: getManualLicenseFile
+      with:
+        unityVersion: 2020.3.2f1
       uses: game-ci/unity-request-activation-file@v2
     # Upload artifact (Unity_v20XX.X.XXXX.alf)
     - name: Expose as artifact
